[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dmax-token-tracker"
version = "0.1.0"
description = "Lightweight Anthropic SDK wrapper that logs token usage and cost to Supabase"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "supabase>=2.0,<3.0",
]

[tool.setuptools.packages.find]
where = ["src"]
